<resources>
    <string name="app_name">TrackVan</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="trackvan_van_icon_desc">Van Icon</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- MainActivity -->
    <string name="van_label_1_text">Using Dept</string>
    <string name="van_label_2_text">Started</string>
    <string name="van_label_3_text">Will Return in</string>

    <!-- Subscribe Van Activity -->
    <string name="sub_van_search_input_hint">Van ID # </string>
    <string name="sub_van_search_button_name">Find</string>
    <string name="sub_van_model_label">Model</string>
    <string name="sub_van_year_label">Year</string>
    <string name="sub_van_name_label">Name</string>
    <string name="sub_van_license_label">License</string>
    <string name="sub_van_submit_button_name">Subscribe</string>

    <!-- Use Van Activity -->
    <string name="use_van_start_mileage_label">Start Mileage </string>
    <string name="use_van_destination_label">Destination</string>
    <string name="use_van_department_label">Department</string>
    <string name="use_van_will_return_label">Will Return</string>
    <string name="use_van_submit_button_name">Use</string>
    <string name="return_van_mileage_label">Return Mileage</string>
    <string name="return_van_submit_button_name">Return</string>

    <!-- SignInActivity -->
    <string name="login_failed_log_text">onConnectionFailed</string>
    <string name="login_failed_toast_text">Google Play Services error.</string>
    <string name="signin_failed_log_text">Google Sign-In failed.</string>
    <string name="signin_with_credential_status">signInWithCredential:onComplete:</string>
    <string name="signin_with_credential_fail_log_text">signInWithCredential</string>
    <string name="signin_with_credential_fail_toast_text">Authentication failed.</string>

    <!-- SubscribeVanActivity -->

    <!-- Strings related to Firebase Connection -->
    <string name="connection_fail_log">onConnectionFailed:</string>
    <string name="connection_fail_toast">Google Play Services error.</string>
    <string name="firebase_data_fail_toast_text">Pull data fail </string>
    <string name="firebase_data_load_fail_log_text">loadData:onCancelled</string>

    <string name="fab_content_desc">Add New Van</string>

    <!-- Strings related to Widget -->
    <string name="widget_app_name">TrackVan</string>
    <string name="widget_id">10</string>
    <string name="widget_list_item_text">VAN_ID XYZ</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
