<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UseVanFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/use_van_start_mileage_label_tv"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_text_margin"
            android:layout_marginRight="@dimen/label_text_margin"
            android:gravity="right"
            android:text="@string/use_van_start_mileage_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:id="@+id/use_van_start_mileage_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sub_van_search_input_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/use_van_destination_label_tv"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_text_margin"
            android:layout_marginRight="@dimen/label_text_margin"
            android:gravity="right"
            android:text="@string/use_van_destination_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <EditText
            android:id="@+id/use_van_destination_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/use_van_department_label_tv"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_text_margin"
            android:layout_marginRight="@dimen/label_text_margin"
            android:gravity="right"
            android:text="@string/use_van_department_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <EditText
            android:id="@+id/use_van_department_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/use_van_will_return_label_tv"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/use_van_will_return_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginLeft="@dimen/label_text_margin"
            android:layout_marginRight="@dimen/label_text_margin"/>
        <EditText
            android:id="@+id/use_van_will_return_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"/>

    </LinearLayout>


    <Button
        android:id="@+id/use_van_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_van_submit_button_name" />

</LinearLayout>