<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/section_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        style="@style/AppWidgetSection">

        <TextView
            android:id="@+id/appwidget_id_label_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/widget_app_name"
            style="@style/AppWidgetLabel" />

        <TextView
            android:id="@+id/appwidget_id_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/widget_id"
            style="@style/AppWidgetText" />

    </LinearLayout>


    <ListView
        android:id="@+id/appwidget_van_list_lv"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/section_1"
        style="@style/AppWidgetSection"/>


</RelativeLayout>